--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,8 +53,11 @@ data-target="#bs-example-navbar-collapse-1">
 </nav>
 
 </header>
+<div class="container">
+  
+  <%= yield %>
 
-<%= yield %>
+</div>
 
 </body>
 
