--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,8 @@ data-target="#bs-example-navbar-collapse-1">
 
           <li><%=link_to "Sign up", new_user_registration_path%></li>
           <li><%=link_to "Sign in", new_user_session_path%></li>
+          <li><%=link_to "Sign out", destroy_user_session_path , method: :delete%></li>
+
           <% if user_signed_in? %>
           <div class="navbar-right">
             <p class="navbar-text">
