--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -35,6 +35,8 @@ data-target="#bs-example-navbar-collapse-1">
           
 
           <% if user_signed_in? %>
+        <li><%=link_to "My Lounge", user_exercises_path(current_user) %></li>
+
             <li><%=link_to "Sign out", destroy_user_session_path , method: :delete%></li>
 
           <div class="navbar-right">
